--- a/styles/estoque.css
+++ b/styles/estoque.css
@@ -157,7 +157,7 @@ table tbody tr {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 50%;
+    width: 30%;
     display: grid;
     gap: 7px;
     grid-template-columns: 1fr;
@@ -197,4 +197,46 @@ table tbody tr {
     color: red;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Estilos para o Modal de Edição */
+#modalEditProduto {
+    display: none; /* Oculta o modal por padrão */
+    position: fixed; /* Fixa o modal na tela */
+    z-index: 1000; /* Sobrepõe outros elementos */
+    left: 0;
+    top: 0;
+    width: 100%; /* Largura total */
+    height: 100%; /* Altura total */
+    overflow: auto; /* Permite rolagem se necessário */
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro com opacidade */
+}
+
+.modal-content {
+    background-color: #fefefe; /* Fundo branco */
+    margin: 15% auto; /* Centraliza o modal */
+    padding: 20px; /* Espaçamento interno */
+    border: 1px solid #888; /* Borda do modal */
+    width: 30%; /* Largura do modal */
+    max-width: 300px; /* Largura máxima do modal */
+    border-radius: 8px; /* Bordas arredondadas */
+}
+
+.close {
+    color: #aaa; /* Cor do botão de fechar */
+    float: right; /* Posiciona à direita */
+    font-size: 28px; /* Tamanho da fonte */
+    font-weight: bold; /* Negrito */
+}
+
+.close:hover,
+.close:focus {
+    color: black; /* Cor ao passar o mouse */
+    text-decoration: none; /* Remove sublinhado */
+    cursor: pointer; /* Cursor de ponteiro */
+}
+
+.title-edit {
+    text-align: center;
+    display: flex;
 }
